--- a/.env.local.example
+++ b/.env.local.example
@@ -4,3 +4,10 @@
 
 NEXT_PUBLIC_SUPABASE_URL=your-project-url-here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
+
+# Google AdSense Configuration
+# Get this value from your Google AdSense account
+# https://www.google.com/adsense/
+# Format: ca-pub-xxxxxxxxxxxxxxxx
+
+NEXT_PUBLIC_GOOGLE_ADSENSE_ID=ca-pub-xxxxxxxxxxxxxxxx
