--- a/.env.local.example
+++ b/.env.local.example
@@ -5,6 +5,11 @@
 NEXT_PUBLIC_SUPABASE_URL=your-project-url-here
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key-here
 
+# Supabase Service Role Key (SECRET - DO NOT EXPOSE TO CLIENT)
+# This key bypasses Row Level Security and should only be used in server-side code
+# Get this from: Supabase Dashboard > Settings > API > Project API keys > service_role (secret)
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
+
 # Google AdSense Configuration
 # Get this value from your Google AdSense account
 # https://www.google.com/adsense/
