--- a/.env.local.example
+++ b/.env.local.example
@@ -20,4 +20,4 @@ NEXT_PUBLIC_GOOGLE_ADSENSE_ID=ca-pub-xxxxxxxxxxxxxxxx
 # Admin Configuration
 # Set your email address to access admin features (e.g., bulk road import)
 # This email must match the email used for your Supabase authentication
-NEXT_PUBLIC_ADMIN_EMAIL=your-admin-email@example.com
+NEXT_PUBLIC_ADMIN_EMAIL=rugby.sou@icloud.com
